# vrandr

./: PKGBUILD
examples/: layout.toml
src/: app.rs  command.rs  config.rs  main.rs  model.rs  xrandr.rs
src/vrandr-0.1.0/: .SRCINFO  Cargo.toml  LICENSE  PKGBUILD  README.md  README.zh-CN.md
src/vrandr-0.1.0/src/: edid.rs  ui.rs
