[package]
name = "vrandr"
version = "0.1.0"
edition = "2021"
authors = ["vrandr contributors"]
description = "Vim-style TUI for xrandr, built with Ratatui"
license = "MIT"

[dependencies]
ratatui = "0.26.3"
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"

[[bin]]
name = "vrandr"
path = "src/main.rs"
